--- a/ios.html
+++ b/ios.html
@@ -69,10 +69,10 @@
 
 <body style="text-align: center;">
     <div id="Zl">
-        <iframe id="preview" frameborder="0" width="100%" height="400px" scrolling='auto'></iframe>
+        <iframe id="preview" frameborder="0" width="100%" height="350px" scrolling='auto'></iframe>
     </div>
     <strong>
-        <p style="color: red;font-size: 1.25rem;margin-top: 20px;">IOS长按识别下方二维码或截图扫码</p>
+        <p style="color: red;font-size: 1.25rem;margin-top: 20px;">苹果手机长按识别下方二维码</p>
     </strong>
     <div class="container">
 
